Add foo feature file to run e2e test

--- a/angular.json
+++ b/angular.json
@@ -128,8 +128,8 @@
           "builder": "@cypress/schematic:cypress",
           "options": {
             "devServerTarget": "angular-aws-test:serve",
-            "watch": true,
-            "headless": false
+            "watch": false,
+            "headless": true
           },
           "configurations": {
             "production": {
